@@ -43,7 +43,12 @@ class Smarty_Internal_Resource_File extends Smarty_Resource
             ) {
                 throw new SmartyException("Template '{$file}' cannot be relative to template of resource type '{$_template->parent->source->type}'");
             }
-            $path = dirname($_template->parent->source->filepath) . DS . $file;
+            // if we are inside an {block} tag the path must be relative to current template
+            if (isset($_template->ext->_inheritance) && $_template->ext->_inheritance->blockNesting && $_template->parent->parent->_objType == 2) {
+                $path = dirname($_template->parent->parent->source->filepath) . DS . $file;
+            } else {
+                $path = dirname($_template->parent->source->filepath) . DS . $file;
+            }
             // normalize path
             $path = $source->smarty->_realpath($path);
             // files relative to a template only get one shot
